--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
 /[Ll]ibrary/
+/[Ll]ibraries/
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+/NotLineRideriOS/
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
@@ -53,6 +55,7 @@ sysinfo.txt
 
 # Builds
 *.apk
+*.a
 *.unitypackage
 
 # Crashlytics generated file
